# openPrecision

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile_dev  README.md  config.yml  docker-compose.yml  docker-compose_dev.yml  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
doc/: index.html  open_precision.html  search.js
doc/open_precision/: api.html  core.html  external.html  managers.html  system_hub.html  utils.html
doc/open_precision/api/: app.html  dependencies.html  utils.html  v1.html
doc/open_precision/core/: exceptions.html  model.html  plugin_base_classes.html
doc/open_precision/managers/: config_manager.html  data_manager.html  plugin_manager.html  system_task_manager.html  vehicle_manager.html
doc/open_precision/utils/: math.html  neomodel.html  other.html  validation.html
docs/: index.html  open_precision.html  search.js
docs/open_precision/: api.html  core.html  external.html  location_store.html  managers.html  system_hub.html  utils.html
docs/open_precision/api/: app.html  dependencies.html  utils.html  v1.html
docs/open_precision/core/: exceptions.html  model.html  plugin_base_classes.html
docs/open_precision/managers/: config_manager.html  data_manager.html  plugin_manager.html  system_task_manager.html  vehicle_manager.html
docs/open_precision/utils/: math.html  neomodel.html  other.html  validation.html
externalTools/: magnetometer_calibration_tool.py
externalTools/WorldMagneticModel/: WMM_README.txt
externalTools/ublox_gps_fixed/: __init__.py  core.py  sparkfun_predefines.py  ublox_gps.py
openPrecision/: __init__.py  main.py  utils.py
openPrecision/core/: position.py  wmm_data_point.py
openPrecision/core/sensors/: __init__.py  absolute_positioning_sensor.py  inertial_measurement_unit.py
openPrecision/sensor_adapters/: sparkfun_icm20948_imu_adapter.py  ublox_gps_adapter.py
openPrecision/sensor_io/: __init__.py  absoluteImu.py  gps.py  imu.py  lcd.py
openPrecision/wrappers/: wmmToolWrapper.py
open_precision/: __init__.py  __main__.py  custom_sync_manager.py  location_store.py  main.py  manager.py  manager_hub.py  system_hub.py  utils.py
open_precision/api/: __init__.py  app.py  config.py  dependencies.py  server.py  utils.py
open_precision/api/routers/: course.py  system.py
open_precision/api/v1/: __init__.py  config.py  course.py  data_subscription.py  loc_store.py  navigator.py  store.py  vehicle_state.py
open_precision/app_interface/: helper.py  user_interface_delivery.py
open_precision/core/: __init__.py  config_manager.py  exceptions.py  plugin.py  plugin_loader.py  plugin_manager.py  position.py  sensor_manager.py  vehicle_manager.py
open_precision/managers/: action_manager.py  config_manager.py  data_manager.py  persistence_manager.py  plugin_manager.py  system_manager.py  system_task_manager.py  vehicle_manager.py
open_precision/sensor_adapters/: bno055_aos_adapter.py  sparkfun_icm20948_imu_adapter.py  ublox_gps_adapter.py
open_precision/utils/: math.py  neomodel.py  other.py  validation.py
open_precision_frontend/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
open_precision_frontend/src/: App.svelte  app.css  main.ts  stores.ts
tests/: config_manager_test.py  context.py  simpleTest.py  test_config_manager.py  test_model_serialization.py  test_model_to_json.py  test_navigator.py  test_orm.py  test_position_builder.py  test_serialization.py  test_simple.py  test_user_interface.py  test_wmm_wrapper.py
tests/manual_tests/: config.yml  context.py  test_config_manager.py  test_model.py  test_model_serialization.py  test_navigator.py  test_orm.py  test_position_builder.py  test_simple.py  test_user_interface.py  test_wmm_wrapper.py
(+225 files in other folders)
