[tool.poetry]
name = "open_precision"
version = "0.1.0"
description = ""
authors = ["larsjaeger <lars@jgr.one>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
pyserial = "^3.5"
pyquaternion = "^0.9.9"
flatten-dict = "^0.4.2"
"ruamel.yaml" = "^0.17.21"
sparkfun-qwiic-icm20948 = "^0.0.1"
adafruit-python-shell = "^1.3.3"
adafruit-circuitpython-bno055 = "^5.4.1"
spidev = { version = "^3.5", optional = true }
uvicorn = "^0.18.2"
python-socketio = "^5.7.1"
websockets = "^10.3"
sparkfun-ublox-gps = { git = "https://github.com/DanNsk/Qwiic_Ublox_Gps_Py.git", rev = "master" }
ruamel-yaml-string = "^0.1.0"
neomodel = "^5.0.0"
fastapi = "^0.96.0"
redis = "^4.5.5"
fastapi-utils = "^0.2.1"
dill = "^0.3.6"
aioprocessing = { extras = ["dill"], version = "^2.0.1" }
makefun = "^1.15.1"
gpiod = "^1.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
