[tool.poetry]
name = "open_precision"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["larsjaeger <lars@jgr.one>"]


# --- declare dependencies ---

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.22.4"
pyserial = "^3.5"
pyquaternion = "^0.9.9"
flatten-dict = "^0.4.2"
"ruamel.yaml" = "^0.17.21"
sparkfun-qwiic-icm20948 = "^0.0.1"
adafruit-circuitpython-bno055 = "^5.4.1"
python-socketio = "^5.7.1"
websockets = "^10.3"
ruamel-yaml-string = "^0.1.0"
neomodel = "^5.0.0"
fastapi = "^0.96.0"
redis = "^4.5.5"
fastapi-utils = "^0.2.1"
dill = "^0.3.6"
aioprocessing = { extras = ["dill"], version = "^2.0.1" }
makefun = "^1.15.1"
gpiod = "^1.5.4"
httpx = "^0.25.0"
adafruit-bno055 = "^1.0.2"
uvicorn = "^0.18.2"
adafruit-extended-bus = "^1.0.2"
pyubx2 = "^1.2.35"

[tool.poetry.group.dev] # Development dependencies for testing, formatting/ linting and building docs.
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.1.1"
nox = "^2023.4.22"
pdoc = "^14.1.0"
pre-commit = "^3.5.0"
viztracer = "^0.16.1"


[tool.poetry.group.deployment.dependencies]
spidev = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# --- configure development tool chain ---

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib --ignore=tests/manual_tests/"
pythonpath = [
    "src"
]

testpaths = [
    "tests"
]


[tool.ruff]
# Include all Python files, including type stubs and Jupyter notebooks.
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.lint]
ignore = [
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "ISC001",
    "ISC002"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
